增加ws反馈线程所有 信息
