# routers/commentsRouter_controllers.go
@@ -9,6 +9,15 @@ func init() {
 
     beego.GlobalControllerRouter["helloprecision/controllers:UserInterfaceController"] = append(beego.GlobalControllerRouter["helloprecision/controllers:UserInterfaceController"],
         beego.ControllerComments{
+            Method: "GetLengthOfThread",
+            Router: `/GetLengthOfThread/`,
+            AllowHTTPMethods: []string{"get"},
+            MethodParams: param.Make(),
+            Filters: nil,
+            Params: nil})
+
+    beego.GlobalControllerRouter["helloprecision/controllers:UserInterfaceController"] = append(beego.GlobalControllerRouter["helloprecision/controllers:UserInterfaceController"],
+        beego.ControllerComments{
             Method: "SetResourceSample",
             Router: `/SetResourceSample/`,
             AllowHTTPMethods: []string{"post"},
@@ -28,7 +37,7 @@ func init() {
     beego.GlobalControllerRouter["helloprecision/controllers:UserInterfaceController"] = append(beego.GlobalControllerRouter["helloprecision/controllers:UserInterfaceController"],
         beego.ControllerComments{
             Method: "StartSingleThread",
-            Router: `/startSingleThread/`,
+            Router: `/StartSingleThread/`,
             AllowHTTPMethods: []string{"get"},
             MethodParams: param.Make(),
             Filters: nil,
